# crypto-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/analytics/: __init__.py  cross_exchange.py  liquidity.py  scoring.py  spreads.py  trend.py  utils.py  volatility.py  volume_anomaly.py  worker.py
backend/app/api/routes/: analytics.py  health.py  market.py  simulation.py
backend/app/db/: pool.py
backend/app/ingest/: binance_ws.py  bybit_ws.py  coinbase_ws.py  kraken_ws.py  normalizers.py  symbols.py
backend/app/schemas/: market.py
backend/app/services/: broadcaster.py  market_state.py
backend/app/simulation/: __init__.py  automation.py  backtest.py
backend/app/tests/: test_automation.py  test_backtest.py
backend/app/tests/analytics/: test_exchange_adapters.py  test_metrics.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_market_and_analytics.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/simulation/: page.tsx
frontend/components/: Btc24hChart.tsx  CandleChart.tsx  ConnectionHealth.tsx  OrderBook.tsx  PriceTicker.tsx  TradeTape.tsx  VolumePanel.tsx
frontend/components/analytics/: AnalyticsEventFeed.tsx  AnalyticsShell.tsx  CrossExchangePanel.tsx  MetricCard.tsx  (+9 more)
frontend/lib/: analyticsTypes.ts  backendConfig.ts  format.ts  simulationTypes.ts  types.ts
infra/postgres/: init.sql
