[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-market-dashboard-backend"
version = "0.1.0"
description = "Read-only crypto market data backend"
requires-python = ">=3.9"
dependencies = [
  "alembic==1.14.0",
  "asyncpg==0.30.0",
  "fastapi==0.115.6",
  "psycopg[binary]==3.2.13",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "uvicorn==0.32.1",
  "websockets==13.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "ruff==0.8.4"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["app"]
